--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,27 +1,31 @@
 <h1>Sign up</h1>
 
 <div class="row">
-    <div class="col-md-6 col-md-offset-3">
-        <%= form_for(@user) do |f| %>
-          <%= render 'shared/error_messages', object: f.object %>
+  <div class="col-md-6 col-md-offset-3">
+    <%= form_for(@user) do |f| %>
+      <%= render 'shared/error_messages', object: f.object %>
         
-          <%= f.label :name %>
-          <%= f.text_field :name, class: 'form_control' %>
+      <%= f.label :name %>
+      <%= f.text_field :name, class: 'form_control' %>
           
           
-          <%= f.label :email %>
-          <%= f.text_field :email, class: 'form_control' %>
+      <%= f.label :email %>
+      <%= f.text_field :email, class: 'form_control' %>
+          
+      <%= f.label :address %>
+      <%= f.text_field :address, class: 'form_control' %>
+          
+      <%= f.label :profile %>
+      <%= f.text_area:profile, class: 'form_control' %>
+          
+      <%= f.label :password %>
+      <%= f.password_field :password, class: 'form_control' %>
+          
+      <%= f.label :password_confirmation, "Confirmation" %>
+      <%= f.password_field :password_confirmation, class: 'form_control' %>
           
           
-          <%= f.label :password %>
-          <%= f.password_field :password, class: 'form_control' %>
-          
-          
-          <%= f.label :password_confirmation, "Confirmation" %>
-          <%= f.password_field :password_confirmation, class: 'form_control' %>
-          
-          
-          <%= f.submit "Create my account", class: "btn btn-large btn-primary" %>
-        <% end %>
-    </div>
+      <%= f.submit "Create my account", class: "btn btn-large btn-primary" %>
+    <% end %>
+  </div>
 </div>
