--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -17,3 +17,5 @@
     <% end %>
   </div>
 </div>
+<P><%= link_to "follow" , followings_user_path %></p>
+<p><%= link_to "follower" , followers_user_path %></p>
