--- a/app/views/users/followings.html.erb
+++ b/app/views/users/followings.html.erb
@@ -1,7 +1,11 @@
 <h1>follow</h1>
 
 <% @users.each do |user| %>
-<p>
-  <li><%= user.name %></li>
-</p>
+  <a>
+    <%= link_to user.name, user_path(user) %>
+    <%= link_to gravatar_for(@user, size: 40), user_path(user) %>
+  </a>
+  <br>
+  <br>
+  <br>
 <% end %>
