--- a/app/views/microposts/_micropost.html.erb
+++ b/app/views/microposts/_micropost.html.erb
@@ -4,9 +4,11 @@
   <span class="content"><%= micropost.content %></span>
   <span class="timestamp">
     Posted <%= time_ago_in_words(micropost.created_at) %> ago.
+    <%= render 'users/like_form', micropost: micropost %>
     <% if current_user == micropost.user %>
       <%= link_to "delete", micropost, method: :delete,
                                        data: { confirm: "You sure?" } %>
     <% end %>
+    <%= link_to 'この記事をLikeしている人の一覧へのリンク', liked_users_micropost_path(micropost) %>
   </span>
 </li>
